--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
     </scm>
 
     <dependencies>
+        <dependency>
+            <groupId>guru.nidi.raml</groupId>
+            <artifactId>raml-tester</artifactId>
+            <version>0.0.5</version>
+        </dependency>
 
     </dependencies>
 
